<resources>
    <string name="app_name">foodRecipeApp</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="save_fragment">save fragment</string>
    <string name="home_fragment">home fragment</string>
    <string name="search_fragment">search fragment</string>
    <string name="hello">Hello!</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_logo">Add Logo</string>
    <string name="logo">Logo</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here!</string>
    <string name="register_account">Register Account</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_email_address_to_retrieve_your_password">Please enter your email address to retrieve your password</string>
    <string name="recover_your_password">Recover your password!</string>
</resources>