<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-5dp">

        <TextView
            android:id="@+id/recoverPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="34dp"
            android:text="@string/recover_your_password"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/passwordInstructions"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginBottom="32dp"
            android:text="@string/please_enter_your_email_address_to_retrieve_your_password"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/emailForRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:autofillHints="email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/recoverPasswordButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginBottom="32dp"
            android:text="@string/submit"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_200"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>