<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Sign Up"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/personName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:minHeight="55dp"
        android:nextFocusDown="@id/emailAddress"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="55dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:nextFocusDown="@id/TextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="55dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:nextFocusDown="@id/TextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/TextPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLines="1"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:minHeight="55dp"
        android:paddingBottom="10dp"
        android:nextFocusDown="@id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:minHeight="55dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextPhone"
        android:autofillHints="" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/register_account"
        android:textColor="#311B92"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signInHereText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/signInHereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="156dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/already_have_an_account_sign_in_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>